allprojects {
    apply plugin: 'application'
    apply plugin: 'idea'

    sourceCompatibility = '11'
    targetCompatibility = '11'

    repositories {
        mavenLocal()
        jcenter()
        mavenCentral()
        google()
    }

    group 'de.fh_kiel'
    version '1.1'
}

subprojects {
    dependencies {
        implementation 'org.apache.commons:commons-lang3:3.+'
        implementation 'org.slf4j:slf4j-simple:1.7.+'

        implementation rootProject

        testImplementation 'org.junit.jupiter:junit-jupiter:5.4.+'
        testImplementation 'org.hamcrest:hamcrest-all:1.3'

    }
}

project(':guice') {
    dependencies {
        implementation 'com.google.inject:guice:4.2.+'
    }
    mainClassName = "GuiceApplication"
}

project(':spring') {
    dependencies {
        implementation 'org.springframework:spring-context:5.1.6.RELEASE'
    }
    mainClassName = "SpringApplication"
}

test {
    useJUnitPlatform()
}

wrapper {
    gradleVersion = '5.3.1'
    distributionType = Wrapper.DistributionType.ALL
}